--- a/qrscanUserName.html
+++ b/qrscanUserName.html
@@ -39,41 +39,47 @@
 <body>
     <h1>QR Code Scanner</h1>
     <div id="qr-reader"></div>
-    <div id="output">
-        <p><strong>Code:</strong> <span id="username"></span></p>
-    </div>
-   
-    <script>
-        const usernameElement = document.getElementById("username");
+<div id="output">
+    <p><strong>Code:</strong> <span id="username"></span></p>
+    <button id="login-button" disabled>Login</button>
+</div>
 
-        function onScanSuccess(decodedText) {
-            try {
-                // Assuming QR Code contains JSON, e.g., {"username": "user123", "password": "pass123"}
-   
-                const username = decodedText;
-        
-                // Display extracted credentials
-                usernameElement.textContent = username;
-     
+<script>
+    const usernameElement = document.getElementById("username");
+    const loginButton = document.getElementById("login-button");
 
-                // Enable and configure login button
-                const loginUrl = `http://10.0.0.1/login?username=${encodeURIComponent(username)}&password=${encodeURIComponent(username)}`;
+    function onScanSuccess(decodedText) {
+        try {
+            // Assuming QR Code contains single string like VC15486516
+            const username = decodedText;
+
+            // Display extracted credentials
+            usernameElement.textContent = username;
+
+            // Enable the login button
+            loginButton.disabled = false;
+
+            // Set the login URL
+            const loginUrl = `http://10.0.0.1/login?username=${encodeURIComponent(username)}&password=${encodeURIComponent(username)}`;
+            loginButton.onclick = () => {
                 window.location.href = loginUrl; // Redirect to MikroTik login
-            } catch (e) {
-                alert("Invalid QR Code format! Please scan a valid QR code.");
-            }
+            };
+        } catch (e) {
+            alert("Invalid QR Code format! Please scan a valid QR code.");
         }
+    }
 
-        function onScanFailure(error) {
-            console.warn(`QR Code scanning error: ${error}`);
-        }
+    function onScanFailure(error) {
+        console.warn(`QR Code scanning error: ${error}`);
+    }
 
-        // Initialize the QR Code reader
-        const html5QrcodeScanner = new Html5QrcodeScanner("qr-reader", {
-            fps: 10,   // Frames per second
-            qrbox: 250 // Scanning box size
-        });
-        html5QrcodeScanner.render(onScanSuccess, onScanFailure);
-    </script>
+    // Initialize the QR Code reader
+    const html5QrcodeScanner = new Html5QrcodeScanner("qr-reader", {
+        fps: 10,   // Frames per second
+        qrbox: 250 // Scanning box size
+    });
+    html5QrcodeScanner.render(onScanSuccess, onScanFailure);
+</script>
+
 </body>
 </html>
