--- a/wifi5scan.html
+++ b/wifi5scan.html
@@ -40,7 +40,7 @@
 
     <script>
         const usernameElement = document.getElementById("username");
-        const qrCodeValue = encodeURIComponent(decodedText)
+        const qrCodeValue = encodeURIComponent(decodedText);
         
         function onScanSuccess(decodedText) {
             try {
